cmake_minimum_required(VERSION 2.8.12)

PROJECT(eddycp)
SET (CMAKE_BUILD_TYPE Release)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK)
IF(NOT VTK_DIR)
  MESSAGE(FATAL_ERROR "Please set VTK_DIR.")
ENDIF(NOT VTK_DIR)
INCLUDE(${VTK_USE_FILE})
ENDIF(NOT VTK_BINARY_DIR)


FIND_PACKAGE (HDF5)
SET (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES})


FIND_PATH(NETCDF_INCLUDE_DIR netcdf.h)
IF(NETCDF_INCLUDE_DIR)
MESSAGE(STATUS "netcdf module found in " ${NETCDF_INCLUDE_DIR})
ENDIF(NETCDF_INCLUDE_DIR)

set(NETCDF_LIBS /usr/local/lib/libnetcdf.dylib)
IF(NETCDF_LIBS)
MESSAGE(STATUS "netcdf library found in " ${NETCDF_LIBS})
ENDIF(NETCDF_LIBS)




# Use the include path and library for Qt that is used by VTK.
INCLUDE_DIRECTORIES(
  ${HDF5_INCLUDE_DIR}
  ${NETCDF_INCLUDE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)


# Set your files and resources here  

AUX_SOURCE_DIRECTORY(. SRC_DIR)


SOURCE_GROUP("Resources" FILES
  ${RESOURCE_DIR}
  ${EXE_ICON}
)

SOURCE_GROUP("Generated" FILES
  ${UISrcs}
  ${MOCSrcs}
  ${ResourceSrcs}
  ${RCS_SOURCES}
)

ADD_DEFINITIONS(-DQT_GUI_LIBS -DQT_CORE_LIB -DQT3_SUPPORT)
SET_SOURCE_FILES_PROPERTIES(${SRC_DIR} PROPERTIES)


ADD_EXECUTABLE( eddycp MACOSX_BUNDLE ${SRC_DIR} ${RESOURCE_DIR} ${MOCSrcs} ${ResourceSrcs} )

TARGET_LINK_LIBRARIES( eddycp
  ${VTK_LIBRARIES} 
  ${HDF5_LIBRARIES}
  ${NETCDF_LIBS}
)
